crates/rpstate-macros/tests/fails/lookup_node_not_struct.stderr
error[E0599]: no function or associated item named `new` found for type `u16` in the current scope
  --> tests/fails/lookup_node_not_struct.rs:11:27
   |
11 |     #[state(lookup_node = "port", parent = NetworkState)]
   |                           -^^^^^ function or associated item not found in `u16`
   |
help: there is a method `ne` with a similar name, but with different arguments
  --> $RUST/core/src/cmp.rs
   |
   |     fn ne(&self, other: &Rhs) -> bool {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
